cosmetic changes to Dtos and addressing some sonar issues